trying to get icon

--- a/AppTwo2/app/src/main/AndroidManifest.xml
+++ b/AppTwo2/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.apptwo2.apptwo2">
-
+<!--android:icon="@mipmap/ic_launcher" gibt an welches Bild für die App gezeigt werden soll-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
